--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,11 @@
         <!-- Oracle 数据库驱动。由于 Oracle 版权限制，需要去官网下载驱动，然后手动 install 再添加-->
         <ojdbc6.version>11.2.0.1</ojdbc6.version>
         <!-- mybatis 自 3.2 开始需要 JDK 1.6 及以上， mybatis 3.4 也可以运行在 JDK 6、7、8 上 -->
-        <mybatis.version>3.4.1</mybatis.version>
+        <!--<mybatis.version>3.4.1</mybatis.version>-->
         <!-- mybatis-spring 1.3.0+ 需要 mybatis 3.4.0+ 和 spring 3.0.0+ -->
-        <mybatis-spring.version>1.3.0</mybatis-spring.version>
+        <!--<mybatis-spring.version>1.3.0</mybatis-spring.version>-->
+        <!-- Hibernate 5.2 需要 JDK 1.8+ 、JDBC 4.2+，Hibernate 5.1 和 Hibernate 5.0 需要 JDK 1.6+ 、JDBC 4.2+ -->
+        <hibernate.version>4.3.11.Final</hibernate.version>
         <!-- servlet-api -->
         <servlet-api.version>2.5</servlet-api.version>
         <!-- jsp-api -->
@@ -118,7 +120,7 @@
             <artifactId>ojdbc6</artifactId>
             <version>${ojdbc6.version}</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>${mybatis-spring.version}</version>
@@ -127,7 +129,13 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>javax.servlet</groupId>
