update some code

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,12 +1,18 @@
 # =============================================================================
-# 数据库连接配置。这里使用c3p0连接Mysql数据库
+# 数据库连接配置。这里使用c3p0连接数据库
 # =============================================================================
+# Oracle数据库配置
 c3p0.driverClass=oracle.jdbc.OracleDriver
-c3p0.jdbcUrl=jdbc:oracle:thin:@localhost:1521:ORCL?useUnicode=true&characterEncoding=UTF8
-# MYSQL用户名
+c3p0.jdbcUrl=jdbc:oracle:thin:@localhost:1521:test?useUnicode=true&characterEncoding=UTF8
+
+# MySQL数据库配置
+#c3p0.driverClass=com.MySQL.jdbc.Driver
+#c3p0.jdbcUrl=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF8
+
+# 数据库用户名
 c3p0.user=Test_admin_user#01
-# MYSQL密码
-c3p0.password=Admin_pass#38
+# 数据库密码
+c3p0.password=Admin_pass#127
 
 # c3p0连接池中保留的最小连接数
 c3p0.minPoolSize=3
